--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
         <!---Footer--->
         <footer>
-        <p>Created With ❤ By Sachin</p>
+        <p>Created With ❤ By Sachin, {Copyright © by Technical Thapa}</p>
         </footer>
         
         <!---js, jquary, All-->
