all misteks and bugs

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
         <!--Font Style-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Piazzolla&display=swap" rel="stylesheet">
+        <!-- http link -->
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <!--Meta Tags-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Title-->
-        <title>New Website</title>
+        <title>Weather</title>
         <!--<Bootstrap--->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <!--Css Links-->
@@ -71,7 +73,7 @@
                                     <img class="d-block img-fluid" src="IMG/contact.png" alt="Second slide">
                                   </div>
                                   <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="IMG/About.png" alt="Third slide">
+                                    <img class="d-block img-fluid" src="IMG/about.png" alt="Third slide">
                                   </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
